--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: '20.x'
 
-      - run: npm run build
+      - run: npm i && npm run build
 
       - uses: peaceiris/actions-gh-pages@v3.8.0
         with:
