--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/setup-node@v2.4.1
         with:
